<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">uBlog</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="content">Post</string>
    <string name="add_label">ADD NEW POST</string>
    <string name="tutorial">Tap + to add post</string>
    <string name="warning">Please fill at least the title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_everything">Delete everything</string>
    <string name="author">Author</string>
    <string name="used_libraries">Used libraries</string>
    <string name="notification_settings_label">Notification</string>
    <string name="remind_me">Remind to write posts</string>
    <string name="reminder_time">Reminder time</string>
    <string name="details">Details</string>
    <string name="notificationText">Tap to write post</string>
    <string name="general_settings_label">General</string>
    <string name="Share">Share</string>
    <string name="shareTitle">Share…</string>
    <string name="hide">Hide text</string>
    <string name="show">Show text</string>

</resources>
